--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,1 @@
-= render 'events', events: events, current_event: current_event
-= render 'people', people: people
-= render 'locations', locations: locations
-= render 'wishes', wishes_done: wishes_done, wishes_undone: wishes_undone, organizers: organizers
-= render 'companies', companies: companies
+%h2 This is the temporary homepage
