--- a/app/views/labels/_users_list.html.haml
+++ b/app/views/labels/_users_list.html.haml
@@ -2,5 +2,5 @@
   %ul
     - users.each do |user|
       %li
-        = link_to user, title: user.name do
+        = link_to user_url(user, subdomain: false), title: user.name do
           = image_tag 'logo.png', alt: user.name, title: user.name, 'data-src' => user.image
