--- a/app/views/layouts/whitelabel.html.haml
+++ b/app/views/layouts/whitelabel.html.haml
@@ -9,9 +9,13 @@
 
     %link{rel: 'shortcut icon', href: image_path('logo_icon.png')}
 
+    = auto_discovery_link_tag :rss, rss_events_path, title: "Event-Feed"
     = csrf_meta_tag
     = stylesheet_link_tag "application"
     = javascript_include_tag "application", "https://maps.google.com/maps/api/js?sensor=true", "https://apis.google.com/js/plusone.js", "https://platform.twitter.com/widgets.js"
+
+    :javascript
+      I18n.showMore = '#{t("home.show_more")}';
 
   %body
     = fork_me_ribbon
@@ -21,6 +25,8 @@
         #logo= link_to(image_tag('/assets/logo.png', alt: title, title: title), root_path)
         %h1= link_to title, root_path
         %h2= link_to subtitle, root_path
+      %nav#nav
+        = render 'shared/nav'
       .main
         = render 'shared/hint'
         = yield
