scope models to whitelabels

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title= page_title
 
     %meta{charset: "utf-8"}
-    %meta{name: "description", content: "#{title} - #{subtitle} - #{meta_desc}"}
+    %meta{name: "description", content: t("title")}
     %meta{name: "author", content: "Peter Schröder"}
 
     %link{rel: 'shortcut icon', href: image_path('logo_icon.png')}
