--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,9 +1,3 @@
 %ul
-  %li
-    = link_to root_path(anchor: "hamburg_on_ruby"), title: title do
-      %p.logo.ir= title
-  - [:events, :people, :locations, :wishes, :companies].each do |it|
-    %li= link_to t(it), root_path(anchor: it), title: t(it)
-  %li
-    = link_to root_path(anchor: "hamburg_on_ruby"), title: title do
-      %p.logo.ir= title
+  - [:events, :people, :locations, :wishes, :companies].each do |nav|
+    %li= link_to t(nav), root_path(anchor: nav), title: t(nav)
